<resources>
    <string name="app_name">MVVM-Architecture</string>
    <string name="action_ok_en">OK</string>
    <string name="action_no_en">No</string>
    <string name="msg_error_time_out">Connection timeout!</string>
    <string name="msg_error_no_internet">Not connect internet!</string>
    <string name="msg_error_data_parse">Parse data error!</string>
    <string name="search_hint"><font size="15">Search pizza, spa, club, or any</font></string>
    <string name="add_a_listing">Add a Listing</string>
    <string name="location">Hải Châu</string>
    <string name="sort_by_relevance">Sort by Relevance</string>
    <string name="select">Select</string>
    <string name="list">List</string>
    <string name="map">Map</string>

    <string-array name="city_list">
        <item>Bangkok</item>
        <item>London</item>
        <item>Paris</item>
        <item>Singapore</item>
        <item>New York</item>
        <item>Istanbul</item>
        <item>Dubai</item>
        <item>Kuala Lumpur</item>
        <item>Hong Kong</item>
        <item>Barcelona</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>